objects/ScCollection_Funders_Target__c.object
<CustomObject>
    <fields>
        <fullName>Production_RowId__c</fullName>
        <description>Used when migrating records from Production to Sandboxes. Will be blank in Production, but when inserting these records into Sandbox we insert the Id from Prd into this field. This is our logical key for setting this Record in Lookups in other objects.</description>
        <externalId>true</externalId>
        <label>Production_RowId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Source_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source System</label>
        <referenceTo>collect__Source_System__c</referenceTo>
        <relationshipLabel>Funders Targets</relationshipLabel>
        <relationshipName>ScCollection_Funders_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Target__c</fullName>
        <label>Target</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Funders Target</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Funders Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funders Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>